# OpenGL-game

./: .gitignore  CMakeLists.txt  Makefile  opengl-game
res/shaders/: fragment_shader.fs
src/: main.cpp
src/components/: texture.cpp
src/engine/: window.cpp
src/shaders/: shader.cpp  shader_program.cpp
